enable java 21 testing